# bs_int

./: Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  pyproject.toml  uwsgi.conf
.github/workflows/: pr.yml  publish.yml
bs_int/: manage.py
bs_int/bs_int/: asgi.py  settings.py  wsgi.py
bs_int/rates/: admin.py  models.py  quant_assessment_template.xlsx  quant_assessment_template_graduated.xlsx  tests.py
bs_int/rates/management/commands/: genval.py  initdata.py
bs_int/rates/migrations/: 0001_initial.py  0002_alter_treasurydata_options.py  0002_auto_20240403_1737.py  0003_dataset_loaded_alter_dataset_five_year_and_more.py  0003_remove_treasurydata_loaded.py  0004_treasurydata_chart.py  0005_alter_treasurydata_chart.py  0006_alter_treasurydata_four_month_and_more.py
bs_int/rates/templates/admin/rates/: submit_line.html
bs_int/site/: asgi.py  prod_settings.py  settings.py  urls.py  wsgi.py
nginx/: app.conf
